refactor: change templ engine to jet

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -6,3 +6,8 @@ main {
     padding-left: 3rem;
     padding-right: 3rem;
 }
+
+img {
+    border-radius: var(--pico-border-radius);
+    box-shadow: var(--pico-box-shadow);
+}
